Fix white space under search results

--- a/app/css/main.css
+++ b/app/css/main.css
@@ -593,7 +593,7 @@ section#search .search-results-container {
   float: left;
   padding: 20px;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   -o-box-sizing: border-box;
