--- a/app/css/stylus/media/screen-default.styl
+++ b/app/css/stylus/media/screen-default.styl
@@ -186,7 +186,7 @@ section#search
 		float left
 		padding 20px
 		width 100%
-		height 100%
+		min-height 100%
 		box-sizing border-box
 		
 		.search-result-box
